source/common/objects/C52_MongoSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C52 Mongo Settings</description>

	<fields>
        <fullName>Database__c</fullName>
        <defaultValue>&quot;heroku_w830mlvd&quot;</defaultValue>
        <description>the database name</description>
        <label>Mongodb Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TokenType__c</fullName>
        <defaultValue>&quot;bearer&quot;</defaultValue>
        <description>the token type</description>
        <label>Token Type</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>the auth token</description>
        <label>Auth Token</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>C52 Mongo Settings</label>
</CustomObject>